# interactive-analytics

./: .gitignore  LICENSE  README.md
dashboard/: .env.example  .gitignore  README.md  run-dashboard.sh  run-users.sh
dashboard/api/: pyproject.toml  server.py
dashboard/locust/: locustfile.py  pyproject.toml
dashboard/public/: index.html
dashboard/spcs/: _lib.sh  config.env  deploy.sh  status.sh  update.sh
dashboard/spcs/dashboard/: .dockerignore  Dockerfile  entrypoint.sh
dashboard/spcs/locust/: Dockerfile
dashboard/spcs/specs/: dashboard.yaml  locust.yaml
dashboard/sql/: create_lineitem_dashboard.sql
interactive-vs-standard/: README.md
interactive-vs-standard/sql/: setup-test.sql
skill/: .env.example  notes.txt  run-locust.sh  run-server.sh
skill/.snowflake/cortex/plans/: benchmark-api-restructure.plan.md
skill/api/: pyproject.toml  server.py
skill/locust/: locustfile.py
skill/spcs/: README.md  build-and-push.sh  config.env  logs.sh  teardown.sh
skill/spcs/dashboard/: Dockerfile  entrypoint.sh
skill/spcs/locust/: .dockerignore  entrypoint.sh
skill/spcs/specs/: dashboard.yaml
skill/sql/: benchmark-query.sql
tpc-h/: .gitignore
