[project]
name = "dashboard-api"
version = "0.1.0"
description = "TPC-H benchmark dashboard API server (Python / Snowflake)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "python-dotenv>=1.0",
    "snowflake-connector-python[secure-local-storage]>=3.12",
    "uvicorn[standard]>=0.32",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
