[project]
name = "dashboard-locust"
version = "0.1.0"
description = "Locust load tests for the TPC-H benchmark dashboard API"
requires-python = ">=3.11"
dependencies = [
    "locust>=2.32",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
